permission no longer denied,  ldid (DO NOT USE UNTIL PRE-RELEASE)

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,8 @@ build_script:
 
     echo "start haxx build"
 
+    chmod +x ./haxx/ldid
+
     cp ./executables/ldid/ldid ./haxx/ldid
 
     cd ./haxx
